# stb-resize

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml
app/: CMakeLists.txt  vcpkg.json
app/src/: cli.c  editor.c  editor.h  server.c
dockerfiles/: Dockerfile.server
poller/: Dockerfile.poller  poller.py
pov/: Dockerfile.pov  pov.py
toolchains/: toolchain.cmake
vcpkg-overlays/ports/libyaml/: Smudge.patch  portfile.cmake
vcpkg-overlays/ports/stb/: Smudge.patch  portfile.cmake  vcpkg.json
vcpkg-triplets/: x64-linux.cmake
